MapCheckerCLI: Add initial 'personalEquipment' items.
For the new check we want for #45.

"Cherry-picked" (hand-ported) from
2193255a7f4b0b68b55f38ab2b1a9fa8a4ab1b2f.